--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,14 @@
 {
-  "manifest_version": 2,
+  "manifest_version": 3,
   "name": "ultimate",
   "version": "1.0",
+  "permissions": ["contextMenus"],
   "content_scripts": [
     {
-      "matches": ["https://www.youtube.com/*"],
+      "matches": ["https://*/*"],
       "js": ["src/file.js"]
     }
   ]
+  
 }
 
